# dns-message-parser

./: .clippy.toml  .travis.sh  .travis.yml  Cargo.toml  LICENSE  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml
.travis/: coverage.sh  main.sh
benches/: message.rs
examples/: decode.rs  ecs_decode.rs  ecs_encode.rs  encode.rs
fuzz/: .gitignore  Cargo.toml
fuzz/src/: decode_encode_decode.rs
src/: dns.rs  domain_name.rs  label.rs  lib.rs  macros.rs  question.rs  resource_record.rs  subtypes.rs
src/decode/: decoder.rs  dns.rs  domain_name.rs  error.rs  helpers.rs  macros.rs  mod.rs  question.rs  tests.rs  value.rs
src/decode/resource_record/: decode.rs  decode_data.rs  mod.rs  r_data.rs
src/decode/rr/: draft_ietf_dnsop_svcb_https.rs  enums.rs  macros.rs  mod.rs  rfc_1035.rs  rfc_1183.rs  rfc_1706.rs  rfc_1712.rs  rfc_1876.rs  rfc_2163.rs  rfc_2230.rs  rfc_2782.rs  rfc_3123.rs  rfc_3596.rs  rfc_3658.rs  rfc_4034.rs  rfc_6672.rs  rfc_6742.rs  rfc_6891.rs  rfc_7043.rs  rfc_7553.rs  rfc_7830.rs  rfc_7871.rs  rfc_7873.rs  rfc_8659.rs  subtypes.rs  tests.rs  unknown.rs
src/decode/rr/edns/: rfc_6891.rs  rfc_7314.rs  rfc_7830.rs  rfc_7871.rs  rfc_7873.rs  rfc_8914.rs
src/encode/: dns.rs  domain_name.rs  encoder.rs  error.rs  helpers.rs  macros.rs  mod.rs  question.rs  tests.rs  value.rs
src/encode/resource_record/: encode.rs  encode_data.rs  mod.rs  r_data.rs
src/encode/rr/: draft_ietf_dnsop_svcb_https.rs  enums.rs  macros.rs  mod.rs  rfc_1035.rs  rfc_1183.rs  rfc_1706.rs  rfc_1712.rs  rfc_1876.rs  rfc_2163.rs  rfc_2230.rs  rfc_2782.rs  rfc_3123.rs  rfc_3596.rs  rfc_3658.rs  rfc_4034.rs  rfc_6672.rs  rfc_6742.rs  rfc_6891.rs  rfc_7043.rs  rfc_7553.rs  rfc_7830.rs  rfc_7871.rs  rfc_7873.rs  rfc_8659.rs  subtypes.rs  tests.rs  unknown.rs
src/encode/rr/edns/: mod.rs  rfc_6891.rs  rfc_7314.rs  rfc_7830.rs  rfc_7871.rs  rfc_7873.rs  rfc_8914.rs
src/rr/: draft_ietf_dnsop_svcb_https.rs  enums.rs  macros.rs  mod.rs  rfc_1035.rs  rfc_1183.rs  rfc_1706.rs  rfc_1712.rs  rfc_1876.rs  rfc_2163.rs  rfc_2230.rs  rfc_2782.rs  rfc_3123.rs  rfc_3596.rs  rfc_3658.rs  rfc_4034.rs  rfc_6672.rs  rfc_6742.rs  rfc_6891.rs  rfc_7043.rs  rfc_7553.rs  rfc_7871.rs  rfc_7873.rs  rfc_8659.rs  subtypes.rs  tests.rs  unknown.rs
src/rr/edns/: mod.rs  rfc_6891.rs  rfc_7314.rs  rfc_7830.rs  rfc_7871.rs  rfc_7873.rs  rfc_8914.rs
tests/: class.rs  decode.rs  decode_encode_decode.rs  decode_error.rs  display.rs  domain_name.rs  encode.rs  error.rs  generic.rs  question.rs  ttl.rs
