[package]
name = "dns-message-parser"
version = "0.4.3"
authors = ["LinkTed <link.ted@mailbox.org>"]
edition = "2018"
readme = "README.md"
keywords = ["dns", "parser", "encode", "decode"]
description = "Libary to encode and decode DNS packets"
license = "BSD-3-Clause"
repository = "https://github.com/LinkTed/dns-message-parser"
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE",
    ]
categories = [
    "parser-implementations",
    "encoding"
    ]

[dependencies]
bytes = "~1.0"
regex = "~1.4"
lazy_static = "~1.4"
hex = "~0.4"
thiserror = "~1.0"
