[package]
name = "dns-message-parser"
version = "0.5.0"
authors = ["LinkTed <link.ted@mailbox.org>"]
edition = "2018"
readme = "README.md"
keywords = ["dns", "parser", "encode", "decode"]
description = "Libary to encode and decode DNS packets"
license = "BSD-3-Clause"
repository = "https://github.com/LinkTed/dns-message-parser"
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE",
    ]
categories = [
    "parser-implementations",
    "encoding"
    ]

[dependencies]
base64 = "~0.13"
bytes = "~1.0"
hex = "~0.4"
thiserror = "~1.0"

[dev-dependencies]
criterion = "~0.3.4"

[[bench]]
name = "message"
path = "benches/message.rs"
harness = false
